<resources>
    <string name="app_name">distress</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder">placeholder</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_contact_list">Contact List</string>
    <string name="title_activity_settings">Settings</string>
    <string name="save_button">Save</string>
    <string name="enter_contact">Enter Contact Details</string>
    <string name="hint_name">Contact Name</string>
    <string name="hint_number">Enter Number</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="distress_message">Distress Message</string>
    <string name="change_distress_message">Change Distress Message</string>
    <string name="hint_distress_message">Distress Message</string>
    <string name="send_distress_confirmation">Toggle confirmation dialog before sending distress.</string>

</resources>
