<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:text="@string/enter_contact"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

             <EditText
                 android:id="@+id/contactName"
                 android:layout_below="@+id/title"
                 android:hint="@string/hint_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>


            <EditText
                android:id="@+id/contactNumber"
                android:inputType="number"
                android:layout_below="@+id/contactName"
                android:hint="@string/hint_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save_button"
                android:background="@color/colorAccent"
                android:layout_below="@+id/contactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>